# neurotendrils-app

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/brain/: ATTRIBUTION.md
assets/eeg/v2/: ATTRIBUTION.md  model.onnx  model.onnx.data  model_metadata.json  test_stream_manifest.json
cmake/: StripLegacyAgl.cmake
config/: brain_regions.json  education.json  roarm_commands.json
eeg/: CMakeLists.txt
eeg/cmake/: OnnxRuntime.cmake
eeg/include/common/: types.hpp
eeg/include/inference/: onnx_runner.hpp
eeg/include/io/: bundle_reader.hpp
eeg/include/preprocess/: preprocessor.hpp  window_buffer.hpp
eeg/src/inference/: onnx_runner.cpp
eeg/src/io/: bundle_reader.cpp
eeg/src/preprocess/: preprocessor.cpp  window_buffer.cpp
include/: AppVersion.hpp
include/arm/: RoArmController.hpp
include/data/: AppConfig.hpp  AppPaths.hpp
include/eeg/: EegBundlePaths.hpp  EegStreamPlayer.hpp  GestureMapper.hpp
include/theme/: AppFonts.h  ColorPalette.h  ThemeManager.h  ThemeManager.hpp
include/ui/: ArmWorkspace.hpp  BrainView.hpp  EducationPage.hpp  EegStreamView.hpp  HomePage.h  HomePage.hpp  MainWindow.h  MainWindow.hpp  RoboticArmPage.hpp  SettingsMenu.h  SettingsOverlay.h  SettingsOverlay.hpp  WipPage.hpp
packaging/linux/: neurotendrils.desktop
packaging/macos/: AppIcon.icns
packaging/windows/: NeuroTendrils.rc
qml/: BrainScene.qml
resources/: data.qrc  qml.qrc  resources.qrc
src/: main.cpp
src/arm/: RoArmController.cpp
src/data/: AppConfig.cpp  AppPaths.cpp
src/eeg/: EegBundlePaths.cpp  EegStreamPlayer.cpp  GestureMapper.cpp
src/theme/: AppFonts.cpp  ColorPalette.cpp  ThemeManager.cpp
src/ui/: ArmWorkspace.cpp  BrainView.cpp  EducationPage.cpp  EegStreamView.cpp  HomePage.cpp  MainWindow.cpp  MainWindow.h  RoboticArmPage.cpp  SettingsMenu.cpp  SettingsOverlay.cpp  WipPage.cpp
